修正  - 全局安保修正从属关系表  - 增加超级管理员特权, 任意页面均可进入无需设定权限
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -156,10 +156,10 @@
 {% endfor %}
         </ul>
 {% endif %}
-{% if request.domElement.sub_set %}
+{% if request.domElement.sub %}
         <div id="tool">
             <ul class="action">
-{% for i in request.domElement.sub_set %}
+{% for i in request.domElement.sub %}
                 <li><a href="{% url i.0 %}" class="button">{{ i.1 }}</a></li>
 {% endfor %}
             </ul>
