修正  - 完善后台会员信息注册修改功能  - 将后台通用翻页从写为标签
待定
 - 将后台各APP通用搜索栏重写为标签



Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/member.htm
+++ b/account/templates/member.htm
@@ -1,13 +1,7 @@
 {% extends "office.base.htm" %}
 
 {% block content %}
-      <div class="search" nowrap="true" colspan="3">
-          <form action="{{ request.path }}" method="get">
-            <input type="text" name="k" value="{{ k }}" id="id_k" />
-            <input type="submit" value=" 搜索 " class="button" />
-            <input type="button" value=" 清空 " class="button" onclick="javascript:(function(){ $('#id_k').val(''); })()"/>
-          </form>
-      </div>
+      {% include 'search.htm' %}
       <table cellpadding="3" cellspacing="1" width="100%" class="sortTable">
           <tr>
             <th>类型</th>
@@ -21,7 +15,7 @@
           <tr align="center">
             <td>{{ i.bsinfo.get_typ_display }}</td>
             <td><a href="{% url 'account:userEditFrm' i.username %}">{{ i.username }}</a></td>
-            <td>{{ i.last_name }}{{ i.first_name }}</td>
+            <td>{{ i.last_name }} {{ i.first_name }}</td>
             <td>{{ i.bsinfo.get_mon_display }}-{{ i.bsinfo.get_day_display }}</td>
             <td>{{ i.bsinfo.get_sex_display }}</td>
             <td>{{ i.pts.pt }}</td>
@@ -31,19 +25,7 @@
             <td align="center" colspan="10">无记录</td>
           </tr>
 {% endfor %}
-          <tr>
-            <td align="right" nowrap="true" colspan="10">
-              总计 {{ u.paginator.count }} 条记录，共 {{ u.paginator.num_pages }} 页，当前第 {{ u.paginator.p }} 页
-              <span id="pageLink">
-                <a href="{{ request.path }}?{% for i in form %}{{ i.name }}={{ i.value }}&{% endfor %}p=1">第一页</a>
-{% if u.has_previous %}
-                <a href="{{ request.path }}?{% for i in form %}{{ i.name }}={{ i.value }}&{% endfor %}p={{ u.previous_page_number }}">上一页</a>
-{% endif %}
-{% if u.has_next %}
-                  <a href="{{ request.path }}?{% for i in form %}{{ i.name }}={{ i.value }}&{% endfor %}p={{ u.next_page_number }}">下一页</a>
-{% endif %}
-              </span>           
-            </td>
-          </tr>
+          {% load page %}
+          {% page u request form %}
       </table>
 {% endblock %}
