--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -52,7 +52,8 @@
             <td align="center" colspan="10">无记录</td>
           </tr>
 {% endfor %}
-          {% include 'page.htm' %}
+          {% load page %}
+          {% page u request form %}
       </table>
 {% endblock %}
 
