修正  - 前台模板稍微修改
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/article/templates/ex.htm
+++ b/article/templates/ex.htm
@@ -1,4 +1,4 @@
-{% extends "shop.base.htm" %} {% block content %}
+{% extends "shop.base.htm" %} {% block middle %}
 <div class="pWhite pd10">
   <h2 class="lpd20 tpd20 bpd20">
     尊敬的31客会员：
