--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -47,7 +47,7 @@
         <div id="main">
             <div id="top">
                 <dl class="mti" id="logo">
-                    <dt><a href="{% url 'shop:shop' %}" title="31客">31KECAKE</a></dt>
+                    <dt><a href="{% url 'shop:shop' %}" title="31客"><img src="http://www.31kecake.com/templates/images/logo.gif" alt="" width="50%" height="50%" /></a></dt>
                     <dd><!-- <img src="{{ static }}new31/images/13741335652678.jpg" width="150" height="86"/> --></dd>
                 </dl>
                 <ul class="menu">
