--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -181,6 +181,7 @@ input:focus,textarea:focus {
 .mtb5 {
     margin: 5px 0;
 }
+
 .mtb25 {
     margin: 25px 0;
 }
@@ -237,11 +238,11 @@ input:focus,textarea:focus {
     line-height: 26px;
 }
 
-.fl{
-    float:left;
+.fl {
+    float: left;
 }
 
-.w100{
+.w100 {
     width: 100%;
 }
 
@@ -282,6 +283,8 @@ input:focus,textarea:focus {
 #tb #bar dt {
     float: left;
     font-size: 24px;
+    font-family: constantia;
+    font-weight: bold;
 }
 
 #tb #bar dd {
@@ -748,7 +751,7 @@ input:focus,textarea:focus {
     float: left
 }
 
-.pinBox li h2 a{
+.pinBox li h2 a {
     color: #cf9764;
 }
 
@@ -772,12 +775,8 @@ input:focus,textarea:focus {
 }
 
 .pinBox .pinSide2 {
-    background: #FFFFFF;
-    padding: 15px;
     width: 400px;
     float: right;
-    border-radius: 3px;
-    border: 1px solid #D9D9D9
 }
 
 .pinBox .pinSide2 .pinInfo {
@@ -785,14 +784,17 @@ input:focus,textarea:focus {
 }
 
 .pinBox .pinSide3 {
-    background: #FFFFFF;
     float: left;
-    padding: 15px;
     margin-top: 4px;
     min-height: 165px;
     *height: 165px;
+}
+
+.pinBox .pinSide2, .pinBox .pinSide3 {
+    background: #FFFFFF;
+    padding: 15px;
     border-radius: 3px;
-    border: 1px solid #D9D9D9
+    border: 1px solid #cc9866;
 }
 
 .pinBox .pinSide3 .pinInfo {
