--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -218,6 +218,13 @@ input:focus,textarea:focus {
     margin-top: 10px;
 }
 
+.pl5 {
+    padding-left: 5px;
+}
+.pb25 {
+    padding-bottom: 25px;
+}
+
 .ptb5 {
     padding: 5px 0;
 }
@@ -754,7 +761,7 @@ input:focus,textarea:focus {
     float: left
 }
 
-.pinBox li h2 a {
+.pinBox li h2 a, .pinBox li h1 a {
     color: #cf9764;
 }
 
@@ -762,6 +769,11 @@ input:focus,textarea:focus {
     *position: relative;
     *float: left;
     *display: block;
+    border-radius: 3px;
+}
+.pinBox .item, .pinBox .iitem {
+    border: 1px solid #cc9866;
+    padding: 2px;
     border-radius: 3px;
 }
 
