- 后台前端弹窗失效修复
修正

Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -53,7 +53,7 @@
           </tr>
 {% endfor %}
           {% load page %}
-          {% page u request form %}
+          {% page oList request form %}
       </table>
 {% endblock %}
 
