--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -75,7 +75,7 @@
           </tr>
 {% endfor %}
           {% load page %}
-          {% page u request form %}
+          {% page oList request form %}
       </table>
 {% endblock %}
 
