--- a/new31/templates/shop.base.htm
+++ b/new31/templates/shop.base.htm
@@ -32,6 +32,12 @@
             <dl id="bar">
                 <dt>Tel：4000-5927-31</dt>
                 <dd>
+{% if user.is_staff %}
+                    <a href="{% url 'office:office' %}" target="_blank">管理中心</a>
+{% endif %}
+{% if user.is_superuser %}
+                    <a href="{% url 'admin:index' %}" target="_blank">站点管理</a>
+{% endif %}
                     <a href="{% url 'order:queryOrd' %}">订单查询</a>
                     <a href="{% url 'cart:cart' %}">购物车</a>
 {% if user.is_authenticated %}
@@ -47,7 +53,7 @@
         <div id="main">
             <div id="top">
                 <dl class="mti" id="logo">
-                    <dt><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" width="50%" height="50%" /></a></dt>
+                    <dt><a href="{% url 'shop:shop' %}" title="31客"><img src="{{ STATIC_URL }}images/logo.gif" alt="" width="80px" height="75px" /></a></dt>
                     <dd></dd>
                 </dl>
                 <ul class="menu">
