--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -53,6 +53,6 @@
           </tr>
 {% endfor %}
           {% load page %}
-          {% page u request form %}
+          {% page oList request form %}
       </table>
 {% endblock %}
