修正  - 用户快速注册功能完善  - 用户登录后重定向修正  - 修正逻辑各APP中各页面跳转代码
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/settings.htm
+++ b/account/templates/settings.htm
@@ -17,7 +17,7 @@
                     </tr>
                     <tr>
                         <td align="right">积分：</td>
-                        <td>{{ request.user.pts.pt }}</td>
+                        <td>{{ user.pts.pt }}</td>
                     </tr>                    
                     <tr>
                         <td align="right">{{ frm.sex.label }}：</td>
