--- a/account/templates/login.htm
+++ b/account/templates/login.htm
@@ -3,7 +3,7 @@
 {% block middle %}
         <div id="right">
             <div class="ltb">
-                <form action="{% url 'account:login' %}" method="post">
+                <form action="{% url 'account:login' %}" method="POST">
                 {% csrf_token %}
                 <table cellpadding="0" cellspacing="0" width="335" class="tdptd5">
                     <tr>
@@ -19,7 +19,7 @@
                         <td>&nbsp;</td>
                         <td>
                             <input type="submit" value="登录" class="btn btnbr"/>
-                            <input type="hidden" name="ref" value="list.php?class=14"/>
+                            <input type="hidden" name="next" value="{{ next }}"/>
                         </td>
                     </tr>
                     <tr>
@@ -30,34 +30,22 @@
                 </form>
             </div>
             <div class="ltb">
-                <form action="{% url 'account:register' %}" method="post" onSubmit="return chekreg(this)">
+                <form action="{% url 'account:quicklyREG' %}" method="POST" onSubmit="return chekreg(this)">
                 {% csrf_token %}
                 <table cellpadding="0" cellspacing="0" width="335" class="tdptd5">
                     <tr>
                         <td colspan="2">用户注册</td>
                     </tr>
+{% for i in nfrm %}
                     <tr>
-                        <td align="right">用户名：</td>
-                        <td><input type="text" name="uname" class="input" maxlength="11"/></td>
+                        <td align="right">{{ i.label }}：</td>
+                        <td>{{ i }}</td>
                     </tr>
-                    <tr>
-                        <td align="right">密码：</td>
-                        <td><input type="password" name="pwd" class="input"/></td>
-                    </tr>
-                    <tr>
-                        <td align="right">确认密码：</td>
-                        <td><input type="password" name="spwd" class="input"/></td>
-                    </tr>
-                    <tr>
-                        <td align="right">姓名：</td>
-                        <td><input type="text" name="mname" class="input"/></td>
-                    </tr>
+{% endfor %}
                     <tr>
                         <td align="right"></td>
                         <td>
                             <input type="submit" value="提交" class="btn btnbr"/>
-                            <input type="hidden" name="action" value="reg"/>
-                            <input type="hidden" name="ref" value="list.php?class=14"/>
                         </td>
                     </tr>
                 </table>
