修正  - 前台文章APP模板修正
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/article/templates/ex.htm
+++ b/article/templates/ex.htm
@@ -1,52 +1,16 @@
-{% extends "shop.base.htm" %} {% block middle %}
-<div class="pWhite pd10">
-  <h2 class="lpd20 tpd20 bpd20">
-    尊敬的31客会员：
-  </h2>
-  <p>
-    自2012年1月1日起,K金累积累活动已全面开启。 公司将在今后推出更多增值服务，敬请留意关注。K金兑换在节日期间（圣诞节、春节、情人节、中秋节等）以及节日前一天和法定假日的前一天不参与兑换。感谢您的理解与支持。
-  </p>
-  <h2 class="lpd20 tpd20 bpd20">
-    K金兑换说明：
-  </h2>
-  <h3 class="lpd30 bpd20">
-    什么是K金
-  </h3>
-  <p>
-    K金是31客对本品牌会员的回馈，积累K金可以按照比例兑换31客指定商品及特备礼品。
-  </p>
-  <h3 class="lpd30 tpd20 bpd20">
-    K金的获得
-  </h3>
-  <p>
-    31客会员在31客每一张成功交易的订单，所付现金都可按照总额10：1获得K金回馈；
-  </p>
-  <p>
-    若发生非31客责任退款，将收回当次交易所得K金。
-  </p>
-  <h3 class="lpd30 tpd20 bpd20">
-    K金的有效积累条件
-  </h3>
-  <p>
-    31客K金有效期两年，会员可随时查阅账户下的“可兑换K金”，并按相关条款使用；
-  </p>
-  <p>
-    会员不可将K金转让给其他会员或任何第三人，不同账户下K金不可合并使用；
-  </p>
-  <p>
-    K金不能折算现金或应用于规定活动范围以外项目。
-  </p>
-  <h3 class="lpd30 tpd20 bpd20">
-    K金兑换
-  </h3>
-  <p>
-    K金可用来兑换31客兑换专区中的蛋糕、曲奇、巧克力等附属产品；
-  </p>
-  <p>
-    兑换31客产品和附属产品需全额使用K金兑换；
-  </p>
-  <p>
-    K金不足金额无法使用银行卡、信用卡或现金方式补足余额。
-  </p>
-</div>
+{% extends "shop.base.htm" %} 
+{% block middle %}
+        <div id="left">
+            <ul id="lm">
+                <li><a href="{% url 'article:about' %}">关于31客</a></li>
+                <li><a href="{% url 'article:ex' %}" class="on">关于K金</a></li>
+                <li><a href="{% url 'article:guide' %}">订购指南</a></li>
+            </ul>
+        </div>
+        <div id="right">
+          <h3>尊敬的31客会员：</h3>
+          <p>自2012年1月1日起，K金累积累活动已全面开启。 公司将在今后推出更多增值服务，敬请留意关注。K金兑换在节日期间（圣诞节、春节、情人节、中秋节等）以及节日前一天和法定假日的前一天不参与兑换。感谢您的理解与支持。</p>
+          <p>K金是31客对本品牌会员的回馈，积累K金可以按照比例兑换31客指定商品及特备礼品。31客会员在31客每一张成功交易的订单，所付现金都可按照总额10：1获得K金回馈。若发生非31客责任退款，将收回当次交易所得K金。31客K金有效期两年，会员可随时查阅账户下的“可兑换K金”，并按相关条款使用。会员不可将K金转让给其他会员或任何第三人，不同账户下K金不可合并使用。K金不能折算现金或应用于规定活动范围以外项目。</p>
+          <p>K金可用来兑换31客兑换专区中的蛋糕、曲奇、巧克力等附属产品。兑换31客产品和附属产品需全额使用K金兑换。K金不足金额无法使用银行卡、信用卡或现金方式补足余额。</p>
+        </div>
 {% endblock %}
