--- a/shop/static/shop/css/css.css
+++ b/shop/static/shop/css/css.css
@@ -23,6 +23,11 @@ h3 {
     padding-left: 5px;
 }
 
+h4 {
+    line-height: 1.5;
+    padding-left: 5px;
+}
+
 img {
     border: 0;
     float: left;
@@ -60,8 +65,9 @@ table tr td {
 }
 
 p {
-    line-height: 24px;
-    padding-left: 10px;
+    line-height: 1.5;
+    padding-bottom: 10px;
+    text-indent: 2em;
 }
 
 input[type=text],input[type=password],textarea {
@@ -221,12 +227,38 @@ input:focus,textarea:focus {
 .pl5 {
     padding-left: 5px;
 }
+
+.pl10 {
+    padding-left: 10px;
+}
+
+.pl40 {
+    padding-left: 40px;
+}
+
+.pb10 {
+    padding-bottom: 10px;
+}
+
+.pb20 {
+    padding-bottom: 20px;
+}
+
 .pb25 {
     padding-bottom: 25px;
 }
 
+
+.pt20 {
+    padding-top: 20px;
+}
+
 .ptb5 {
     padding: 5px 0;
+}
+
+.ptb20 {
+    padding: 20px 0;
 }
 
 .ptb25 {
