--- a/account/templates/member.htm
+++ b/account/templates/member.htm
@@ -2,7 +2,7 @@
 
 {% block content %}
       {% include 'search.htm' %}
-      <table cellpadding="3" cellspacing="1" width="100%" class="sortTable">
+      <table cellpadding="3" cellspacing="1" width="100%">
           <tr>
             <th>类型</th>
             <th>帐号</th>
