修正  - 区域APP完善  - 后台根据帐号的区域归属显示相应的订单信息
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -71,7 +71,7 @@
             </tr>
             <tr>
                 <td>详细地址：</td>
-                <td>[ {{ cInfo.area.sub.name }} - {{ cInfo.area.name }} ]&nbsp;&nbsp;{{ cInfo.address }}</td>
+                <td>[ {{ cInfo.area.get_name_display }} ]&nbsp;&nbsp;{{ cInfo.address }}</td>
             </tr>
             <tr>
                 <td>电话：</td>
