--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -47,6 +47,7 @@
         <div class="messagePop" style="display:none;">
           <ul>
             <li><a href="{% url 'logistics:logcs' %}">物流</a></li>
+            <li><a href="{% url 'print:printOrd' %}">票据打印</a></li>
           </ul>
         </div>
       </li>
