待定  - 支付插件机制重新设计
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/login.htm
+++ b/account/templates/login.htm
@@ -45,7 +45,7 @@
                     <tr>
                         <td align="right"></td>
                         <td>
-                            <input type="submit" value="提交" class="btn btnbr"/>
+                            <input type="submit" value="注册" class="btn btnbr"/>
                         </td>
                     </tr>
                 </table>
