--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -76,9 +76,8 @@
           <ul>
             <li><a href="{% url 'discount:dis' %}">试吃</a></li>
             <li><a href="{% url 'discount:dis' %}">会员折扣</a></li>
-            <li><a href="{% url 'discount:dis' %}">蛋糕券</a></li>
+            <li><a href="{% url 'discount:dis' %}">提货券</a></li>
             <li><a href="{% url 'discount:dis' %}">积分换购</a></li>
-            <li><a href="{% url 'discount:dis' %}">活动</a></li>
           </ul>
         </div>
       </li>
@@ -122,14 +121,13 @@
         <a href="{% url 'purview:purview' %}" class="nav">系统设置</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{% url 'purview:purview' %}">商品</a></li>
-            <li><a href="{% url 'purview:purview' %}">规格</a></li>
-            <li><a href="{% url 'purview:purview' %}">标签</a></li>
-            <li><a href="{% url 'purview:purview' %}">首页幻灯片</a></li>
-            <li><a href="{% url 'purview:purview' %}">支付方式</a></li>
-            <li><a href="{% url 'purview:purview' %}">配送区域</a></li>
-            <li><a href="{% url 'purview:purview' %}">收货时间</a></li>
-            <li><a href="{% url 'purview:purview' %}">物流时间</a></li>
+            <li><a href="{% url 'item:items' %}">商品</a></li>
+            <li><a href="{% url 'spec:spec' %}">规格</a></li>
+            <li><a href="{% url 'tag:randomShow' %}">标签</a></li>
+            <li><a href="{% url 'upload:upload' %}">首页幻灯片</a></li>
+            <li><a href="{% url 'payment:pays' %}">支付方式</a></li>
+            <li><a href="{% url 'area:area' %}">配送区域</a></li>
+            <li><a href="{% url 'signtime:signtime' %}">收货时间</a></li>
           </ul>
         </div>
       </li>
