修正  - 支付方式API机制初定
待定
 - 支付方式各插件待编写


Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/account/templates/newuser.htm
+++ b/account/templates/newuser.htm
@@ -40,7 +40,7 @@
       <tr align="center">
           <td>{{ i.act.last_name }}{{ i.act.first_name }}</td>
           <td>{{ i.time|date:"Y-m-d H:i" }}</td>
-          <td>{{ i.note }}</td>
+          <td align="left">{{ i.note }}</td>
       </tr>
 {% endfor %}
       </table>
