--- a/shop/templates/shop.htm
+++ b/shop/templates/shop.htm
@@ -31,16 +31,16 @@
                     </li>
                 </ul>
                 <div class="lsv">
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736245379911.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738608759264.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738609147394.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/1373624631806.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738616471004.jpg"style="float:right;"></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13738616151536.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738616747156.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738617233898.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738617458376.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738617684119.jpg"style=""></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736245379911.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738608759264.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738609147394.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736246318006.jpg" /></a>
+                    <a href="/" class="fr"><img data-src="{{ STATIC_URL }}shop/images/13738616471004.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738616151536.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738616747156.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738617233898.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738617458376.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738617684119.jpg" /></a>
                 </div>
                 <div class="more"><a href="{% url 'tag:tagShow' 'cake' %}">更多...</a></div>
                 <dl class="mti" id="cookie">
@@ -65,13 +65,13 @@
                     </li>
                 </ul>
                 <div class="lsv">
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738628662144.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738628864422.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736248085549.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736248312318.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738629037259.jpg"style="float:right;"></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13738629754790.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736248574566.jpg"style=""></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738628662144.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738628864422.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736248085549.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736248312318.jpg" /></a>
+                    <a href="/" class="fr"><img data-src="{{ STATIC_URL }}shop/images/13738629037259.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738629754790.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736248574566.jpg" /></a>
                 </div>
                 <div class="more"><a href="{% url 'tag:tagShow' 'cookie' %}">更多...</a></div>
                 <dl class="mti" id="chocolate">
@@ -96,16 +96,16 @@
                     </li>
                 </ul>
                 <div class="lsv">
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738619058052.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738619536204.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736251408095.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736251811199.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738620062092.jpg"style="float:right"></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738620435036.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/1373862161576.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738622176590.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738623022765.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/1373625248513.jpg"style=""></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738619058052.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738619536204.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736251408095.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736251811199.jpg" /></a>
+                    <a href="/" class="fr"><img data-src="{{ STATIC_URL }}shop/images/13738620062092.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738620435036.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738621615766.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738622176590.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738623022765.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736252485133.jpg" /></a>
                 </div>
                 <div class="more"><a href="{% url 'tag:tagShow' 'chocolate' %}">更多...</a></div>
                 <dl class="mti" id="pie">
@@ -130,13 +130,13 @@
                     </li>
                 </ul>
                 <div class="lsv">
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/1373862457642.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/1373862478225.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736249661235.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736249424812.jpg"style=""></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738625287697.jpg"style="float:right"></a>
-                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738625469318.jpg"style=""></a>
-                    <a href=""><img data-src="{{ STATIC_URL }}shop/images/13736250118174.jpg"style=""></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738624576422.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738624782252.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736249661235.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736249424812.jpg" /></a>
+                    <a href="/" class="fr"><img data-src="{{ STATIC_URL }}shop/images/13738625287697.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13738625469318.jpg" /></a>
+                    <a href="/"><img data-src="{{ STATIC_URL }}shop/images/13736250118174.jpg" /></a>
                 </div>
                 <div class="more"><a href="{% url 'tag:tagShow' 'pie' %}">更多...</a></div>
 {% endblock %}
