--- a/tag/templates/tag.htm
+++ b/tag/templates/tag.htm
@@ -10,9 +10,9 @@
         <p class="viewDown">向下滚动浏览更多关于:　{{ tag }} 标签商品</p>
         <ul class="pinBox">
 {% for i in items %}
-         <li class="w100 mb30 item">
-         <h1 class="w100 pb25 pl5">{{ forloop.counter|stringformat:"02i" }}. <a href="{% url 'tag:tagShow' i.name|urlencode %}">{{ i.name }}</a></h1>
-            <ul>
+         <li class="mb30 item">
+         <h1 class="pb25 pl5">{{ forloop.counter|stringformat:"02i" }}. <a href="{% url 'tag:tagShow' i.name|urlencode %}">{{ i.name }}</a></h1>
+            <ul class="fl">
                 {% for ii in i.itemimg_set.getBImgs %}
                 <li class="w100 {% if not forloop.last %}mb30{% endif %}">
                 <img alt="{{ i.name }}" title="{{ i.name }}" data-src="{{ ii.img.url }}" class="styp{{ ii.typ }}" />
